XDEVSERVER-203 - Update NavigationItem
SerializableSupplier instead of Supplier